# fantasy-cricket-analysis

./: .gitignore  README.md  ipl2023.py  link-to-hosted-notebook.md  main.py  pyproject.toml  summary_byChatgpt.md  summary_byClaude.md
data/: dataset1_export.csv  dataset2_export.csv  dataset3_export.csv
