[project]
name = "fantasy-cricket-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adjusttext>=1.3.0",
    "marimo>=0.23.3",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "playwright>=1.59.0",
    "seaborn>=0.13.2",
]
